[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/corner.png" type="Texture" id=1]
[ext_resource path="res://assets/paddleP.png" type="Texture" id=2]
[ext_resource path="res://assets/ball.png" type="Texture" id=3]
[ext_resource path="res://assets/paddleG.png" type="Texture" id=4]
[ext_resource path="res://assets/bg.png" type="Texture" id=5]
[ext_resource path="res://assets/bumper.png" type="Texture" id=6]
[ext_resource path="res://ponger.gd" type="Script" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 320, 319.567 )
scale = Vector2( 2.73504, 2.73504 )
texture = ExtResource( 5 )

[node name="paddleLB" type="Sprite" parent="."]
position = Vector2( 320.559, 620.61 )
scale = Vector2( 2.31, 2.31 )
texture = ExtResource( 2 )

[node name="paddleLU" type="Sprite" parent="."]
position = Vector2( 18.813, 319.607 )
rotation = 1.5708
scale = Vector2( 2.31, 2.31 )
texture = ExtResource( 2 )

[node name="paddleRU" type="Sprite" parent="."]
position = Vector2( 320.21, 18.1739 )
scale = Vector2( 2.30973, 2.30973 )
texture = ExtResource( 4 )

[node name="paddleRB" type="Sprite" parent="."]
position = Vector2( 621.489, 319.611 )
rotation = -1.5708
scale = Vector2( 2.30973, 2.30973 )
texture = ExtResource( 4 )

[node name="cornerRU" type="Sprite" parent="."]
position = Vector2( 620.801, 19.1965 )
rotation = 1.5708
scale = Vector2( 2.9404, 2.9404 )
texture = ExtResource( 1 )

[node name="cornerLU" type="Sprite" parent="."]
position = Vector2( 19.2326, 19.2113 )
scale = Vector2( 2.9404, 2.9404 )
texture = ExtResource( 1 )

[node name="cornerLB" type="Sprite" parent="."]
position = Vector2( 19.1919, 620.773 )
rotation = -1.5708
scale = Vector2( 2.9404, 2.9404 )
texture = ExtResource( 1 )

[node name="cornerRB" type="Sprite" parent="."]
position = Vector2( 620.814, 620.849 )
rotation = -3.14159
scale = Vector2( 2.9404, 2.9404 )
texture = ExtResource( 1 )

[node name="bumper" type="Sprite" parent="."]
position = Vector2( 319.463, 320.243 )
scale = Vector2( 3.06537, 3.06537 )
texture = ExtResource( 6 )

[node name="ball" type="Sprite" parent="."]
position = Vector2( 521.965, 123.774 )
scale = Vector2( 1.87026, 1.87026 )
texture = ExtResource( 3 )
